# apic

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md
.apic/: config.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apic-core/: Cargo.toml
apic-core/src/: config.rs  convert.rs  file.rs  fuzzy.rs  json.rs  lib.rs  template.rs  validate.rs
apic-core/src/converter/: mod.rs
apic-core/src/converter/v1_0_0/: mod.rs
apic-core/src/converter/v2_0_0/: mod.rs
apic-core/src/converter/v2_1_0/: mod.rs
apic-core/src/edit/: action.rs  address.rs  mod.rs  model.rs
apic-core/src/templates/: contract.json
apic-gui/: Cargo.toml  build.rs
apic-gui/assets/: icon.icns
apic-gui/src/: desktop.rs  main.rs  settings.rs
apic-gui/src/ui/: mod.rs  sections.rs  syntax_highlighting.rs  theme.rs  widgets.rs
apic-gui/wix/: License.rtf  main.wxs
docs/plans/: 2026-06-07-ambiguous-contract-picker.md
docs/reviews/: 2026-06-07-ambiguous-contract-picker-review.md
docs/specs/: 2026-06-07-ambiguous-contract-picker-design.md
docs/verifications/: 2026-06-07-ambiguous-contract-picker-verify.md
example/: upload.json
example/auth/: login.json  user.json
example/items/: bulk-create.json  list.json
example/user/: upload.json  user.json
example/user/profile/: user.json
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD  README.md
packaging/copr/: .gitignore  README.md  apic.spec
packaging/flatpak/: .gitignore  README.md  io.github.rizukirr.apic.desktop  io.github.rizukirr.apic.metainfo.xml  io.github.rizukirr.apic.yml
packaging/winget/: README.md  submit.ps1
packaging/winget/rizukirr.apic/: rizukirr.apic.installer.yaml  rizukirr.apic.locale.en-US.yaml  rizukirr.apic.yaml
packaging/winget/rizukirr.apic-gui/: rizukirr.apic-gui.installer.yaml  rizukirr.apic-gui.locale.en-US.yaml  rizukirr.apic-gui.yaml
src/: cli.rs  config.rs  convert.rs  file.rs  fuzzy.rs  json.rs  main.rs  picker.rs  render.rs  template.rs  tree.rs  tui.rs
src/converter/: mod.rs
src/converter/v1_0_0/: mod.rs
src/converter/v2_0_0/: mod.rs
src/converter/v2_1_0/: mod.rs
src/templates/: contract.json
src/tui/: draw.rs  mod.rs  model.rs  rows.rs  seed.rs  state.rs
tests/: cli.rs  convert.rs
tests/fixtures/convert/: petstore-v2.1.0.json
