[package]
name = "apic-cli"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
authors = ["Rizki Rakasiwi"]
description = "A lightweight, Git-friendly CLI tool for designing and collaborating on API contracts "
license = "MIT"
readme = "README.md"
repository = "https://github.com/rizukirr/apic"
homepage = "https://github.com/rizukirr/apic"
keywords = ["api", "contract", "cli", "rest", "json"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/.github", "/.apic", "/example"]

[[bin]]
name = "apic"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
toml = "1.1.2"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
