[package]
name = "apic-gui"
version = "0.2.5"
edition = "2024"
rust-version = "1.88"
authors = ["Rizki Rakasiwi"]
description = "Desktop GUI front-end for apic, built on the shared apic-core"
license = "MIT"
repository = "https://github.com/rizukirr/apic"
publish = false

[[bin]]
name = "apic-gui"
path = "src/main.rs"

[dependencies]
apic-core = { path = "../apic-core" }
eframe = "0.33.3"
rfd = "0.17.2"
